Mobile: hide entire navbar__actions div to fix hamburger visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -1563,8 +1563,7 @@ summary,
     display: none;
   }
 
-  .navbar__phone,
-  .navbar__cta {
+  .navbar__actions {
     display: none;
   }
 
